@@ -77,6 +77,10 @@ if ($success) {
     } else {
         if ($type eq 'udeb' && $members[2] ne 'data.tar.gz') {
             tag 'udeb-uses-non-gzip-data-tarball';
+        } elsif ($members[2] eq 'data.tar.xz') {
+            my $rel = $info->relation('pre-depends');
+            tag 'data.tar.xz-member-without-dpkg-pre-depends'
+                unless $rel->implies('dpkg (>= 1.15.6~)');
         }
         $okay = 1;
     }
