@@ -47,3 +47,11 @@ Info: This udeb contains non-gzip data tarballs.  udpkg,
  tarballs which means udebs that contain them will not be
  installable. This can also break the daily or weekly d-i images.
 
+Tag: data.tar.xz-member-without-dpkg-pre-depends
+Severity: pedantic
+Certainty: certain
+Info: The deb uses xz compression for the data member, which requires
+ a Pre-Depends on dpkg (&gt;= 1.15.6~).  This is trivially satisfied in
+ Debian, but it can complicate upgrades from Ubuntu Lucid where dpkg
+ 1.15.6 is not currently available.
+
