@@ -1,5 +1,5 @@
-Last generated 2011-10-13
-Coverage: 762/940 (81.06%), w. legacy tests: 871/940 (92.66%)
+Last generated 2011-11-17
+Coverage: 764/942 (81.10%), w. legacy tests: 873/942 (92.68%)
 
 The following tags are not tested by the test suite:
 
