@@ -6,6 +6,7 @@ lintian (2.5.4) UNRELEASED; urgency=low
       - missing-build-dependency-for-dh-addon
       - python-depends-but-no-python-helper
       - python3-depends-but-no-python3-helper
+      - data.tar.xz-member-without-dpkg-pre-depends
 
   * checks/*:
     + [JW] Replace common_data.pm with Lintian::Check.
@@ -27,6 +28,11 @@ lintian (2.5.4) UNRELEASED; urgency=low
     + [NT] Extended the description of the tag for non-native packages
       with native versions.  Thanks to Jari Aalto for the report.
       (Closes: #580048)
+  * checks/deb-format{,.desc}:
+    + [NT] Added check for using .xz compression in deb files without
+      versioned Pre-Depends on dpkg.  The severity is pedantic for
+      Debian and serious for Ubuntu.  Thanks to Aaron M. Ucko for the
+      rapport.  (Closes: #648350)
   * checks/dehelper{,.desc}:
     + [JW,NT] Check for versioned dependencies for some dh_commands.
       (Closes: #641035)
